--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                         <label for="isenha">Senha</label>
                     </div>
                     <output>
-                        <input type="submit" value="Entrar">
-                        <a href="esqueci.html">
-                            Esqueci a senha <i class="material-icons">mail</i>
+                        <input type="submit" value="Entrar" class="entrar">
+                        <a href="esqueci.html" class="botao">
+                            Esqueci a senha<span class="material-icons">mail;</span>
                         </a>
                     </output>
                 </form>
