finalizando o projeto-ligin

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <output>
                         <input type="submit" value="Entrar" class="entrar">
                         <a href="esqueci.html" class="botao">
-                            Esqueci a senha<span class="material-icons">mail;</span>
+                            Esqueci a senha<span class="material-icons">mail</span>
                         </a>
                     </output>
                 </form>
